--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -73,7 +73,7 @@ sensio_framework_extra:
 # Nelmio CORS Configuration
 nelmio_cors:
     defaults:
-        allow_credentials: false
+        allow_credentials: true
         allow_origin: ['*']
         allow_headers: ['*']
         allow_methods: ['GET', 'POST', 'PUT', 'DELETE', 'OPTIONS']
